build: install and preprocess content before build

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "Body: near and far",
   "type": "module",
   "scripts": {
+    "prebuild": "npm install && npm run process",
     "dev": "vinxi dev",
     "build": "vinxi build",
     "preview": "npx live-server .output/public",
