build: fix build issues

--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "scripts": {
     "prebuild": "npm i && npm run process",
     "dev": "vinxi dev",
-    "build": "vinxi build && rm -r build && cp -r .output/public build",
+    "build": "vinxi build",
     "preview": "npx live-server .output/public",
     "version": "vinxi version",
-    "process": "node ./scripts/process-text.js",
-    "dummy": "echo build"
+    "process": "node ./scripts/process-text.js"
   },
   "dependencies": {
     "@solidjs/meta": "^0.29.4",
